EXTRA_DIST = \
    ./native_and.kt \
    ./native_and.kt.out \
    ./native_and_diff_obj.kt \
    ./native_and_diff_obj.kt.out \
    ./native_and_obj.kt \
    ./native_and_obj.kt.out \
    ./native_equals.kt \
    ./native_equals.kt.out \
    ./native_equals_diff_obj.kt \
    ./native_equals_diff_obj.kt.out \
    ./native_equals_obj.kt \
    ./native_equals_obj.kt.out \
    ./native_nequals.kt \
    ./native_nequals.kt.out \
    ./native_nequals_diff_obj.kt \
    ./native_nequals_diff_obj.kt.out \
    ./native_nequals_obj.kt \
    ./native_nequals_obj.kt.out \
    ./native_not.kt \
    ./native_not.kt.out \
    ./native_or.kt \
    ./native_or.kt.out \
    ./native_or_diff_obj.kt \
    ./native_or_diff_obj.kt.out \
    ./native_or_obj.kt \
    ./native_or_obj.kt.out \
    ./native_str.kt \
    ./native_str.kt.out \
    ./native_xor.kt \
    ./native_xor.kt.out \
    ./native_xor_diff_obj.kt \
    ./native_xor_diff_obj.kt.out \
    ./native_xor_obj.kt \
    ./native_xor_obj.kt.out \
    ./obj_and.kt \
    ./obj_and.kt.out \
    ./obj_and_difftype.kt \
    ./obj_and_difftype.kt.out \
    ./obj_equals.kt \
    ./obj_equals.kt.out \
    ./obj_equals_difftype.kt \
    ./obj_equals_difftype.kt.out \
    ./obj_nequals.kt \
    ./obj_nequals.kt.out \
    ./obj_nequals_difftype.kt \
    ./obj_nequals_difftype.kt.out \
    ./obj_not.kt \
    ./obj_not.kt.out \
    ./obj_or.kt \
    ./obj_or.kt.out \
    ./obj_or_difftype.kt \
    ./obj_or_difftype.kt.out \
    ./obj_str.kt \
    ./obj_str.kt.out \
    ./obj_xor.kt \
    ./obj_xor.kt.out \
    ./obj_xor_difftype.kt \
    ./obj_xor_difftype.kt.out