EXTRA_DIST = \
    ./native_and.kt \
    ./native_and.kt.out \
    ./native_and_diff_obj.kt \
    ./native_and_diff_obj.kt.out \
    ./native_and_obj.kt \
    ./native_and_obj.kt.out \
    ./native_divide.kt \
    ./native_divide.kt.out \
    ./native_divide_by_zero.kt \
    ./native_divide_by_zero.kt.out \
    ./native_divide_diff_obj.kt \
    ./native_divide_diff_obj.kt.out \
    ./native_divide_obj.kt \
    ./native_divide_obj.kt.out \
    ./native_equals.kt \
    ./native_equals.kt.out \
    ./native_equals_diff_obj.kt \
    ./native_equals_diff_obj.kt.out \
    ./native_equals_obj.kt \
    ./native_equals_obj.kt.out \
    ./native_geq.kt \
    ./native_geq.kt.out \
    ./native_geq_diff_obj.kt \
    ./native_geq_diff_obj.kt.out \
    ./native_geq_obj.kt \
    ./native_geq_obj.kt.out \
    ./native_gt.kt \
    ./native_gt.kt.out \
    ./native_gt_diff_obj.kt \
    ./native_gt_diff_obj.kt.out \
    ./native_gt_obj.kt \
    ./native_gt_obj.kt.out \
    ./native_leq.kt \
    ./native_leq.kt.out \
    ./native_leq_diff_obj.kt \
    ./native_leq_diff_obj.kt.out \
    ./native_leq_obj.kt \
    ./native_leq_obj.kt.out \
    ./native_lshift.kt \
    ./native_lshift.kt.out \
    ./native_lshift_diff_obj.kt \
    ./native_lshift_diff_obj.kt.out \
    ./native_lshift_obj.kt \
    ./native_lshift_obj.kt.out \
    ./native_lt.kt \
    ./native_lt.kt.out \
    ./native_lt_diff_obj.kt \
    ./native_lt_diff_obj.kt.out \
    ./native_lt_obj.kt \
    ./native_lt_obj.kt.out \
    ./native_minus.kt \
    ./native_minus.kt.out \
    ./native_minus_diff_obj.kt \
    ./native_minus_diff_obj.kt.out \
    ./native_minus_obj.kt \
    ./native_minus_obj.kt.out \
    ./native_mod.kt \
    ./native_mod.kt.out \
    ./native_mod_by_zero.kt \
    ./native_mod_by_zero.kt.out \
    ./native_mod_diff_obj.kt \
    ./native_mod_diff_obj.kt.out \
    ./native_mod_obj.kt \
    ./native_mod_obj.kt.out \
    ./native_multiply.kt \
    ./native_multiply.kt.out \
    ./native_multiply_diff_obj.kt \
    ./native_multiply_diff_obj.kt.out \
    ./native_multiply_obj.kt \
    ./native_multiply_obj.kt.out \
    ./native_nequals.kt \
    ./native_nequals.kt.out \
    ./native_nequals_diff_obj.kt \
    ./native_nequals_diff_obj.kt.out \
    ./native_nequals_obj.kt \
    ./native_nequals_obj.kt.out \
    ./native_not.kt \
    ./native_not.kt.out \
    ./native_or.kt \
    ./native_or.kt.out \
    ./native_or_diff_obj.kt \
    ./native_or_diff_obj.kt.out \
    ./native_or_obj.kt \
    ./native_or_obj.kt.out \
    ./native_plus.kt \
    ./native_plus.kt.out \
    ./native_plus_diff_obj.kt \
    ./native_plus_diff_obj.kt.out \
    ./native_plus_obj.kt \
    ./native_plus_obj.kt.out \
    ./native_rshift.kt \
    ./native_rshift.kt.out \
    ./native_rshift_diff_obj.kt \
    ./native_rshift_diff_obj.kt.out \
    ./native_rshift_obj.kt \
    ./native_rshift_obj.kt.out \
    ./native_unminus.kt \
    ./native_unminus.kt.out \
    ./native_unplus.kt \
    ./native_unplus.kt.out \
    ./native_xor.kt \
    ./native_xor.kt.out \
    ./native_xor_diff_obj.kt \
    ./native_xor_diff_obj.kt.out \
    ./native_xor_obj.kt \
    ./native_xor_obj.kt.out \
    ./obj_and.kt \
    ./obj_and.kt.out \
    ./obj_and_difftype.kt \
    ./obj_and_difftype.kt.out \
    ./obj_divide.kt \
    ./obj_divide.kt.out \
    ./obj_divide_by_zero.kt \
    ./obj_divide_by_zero.kt.out \
    ./obj_divide_difftype.kt \
    ./obj_divide_difftype.kt.out \
    ./obj_equals.kt \
    ./obj_equals.kt.out \
    ./obj_equals_difftype.kt \
    ./obj_equals_difftype.kt.out \
    ./obj_geq.kt \
    ./obj_geq.kt.out \
    ./obj_geq_difftype.kt \
    ./obj_geq_difftype.kt.out \
    ./obj_gt.kt \
    ./obj_gt.kt.out \
    ./obj_gt_difftype.kt \
    ./obj_gt_difftype.kt.out \
    ./obj_leq.kt \
    ./obj_leq.kt.out \
    ./obj_leq_difftype.kt \
    ./obj_leq_difftype.kt.out \
    ./obj_lshift.kt \
    ./obj_lshift.kt.out \
    ./obj_lshift_difftype.kt \
    ./obj_lshift_difftype.kt.out \
    ./obj_lt.kt \
    ./obj_lt.kt.out \
    ./obj_lt_difftype.kt \
    ./obj_lt_difftype.kt.out \
    ./obj_minus.kt \
    ./obj_minus.kt.out \
    ./obj_minus_difftype.kt \
    ./obj_minus_difftype.kt.out \
    ./obj_mod.kt \
    ./obj_mod.kt.out \
    ./obj_mod_by_zero.kt \
    ./obj_mod_by_zero.kt.out \
    ./obj_mod_difftype.kt \
    ./obj_mod_difftype.kt.out \
    ./obj_multiply.kt \
    ./obj_multiply.kt.out \
    ./obj_multiply_difftype.kt \
    ./obj_multiply_difftype.kt.out \
    ./obj_nequals.kt \
    ./obj_nequals.kt.out \
    ./obj_nequals_difftype.kt \
    ./obj_nequals_difftype.kt.out \
    ./obj_not.kt \
    ./obj_not.kt.out \
    ./obj_or.kt \
    ./obj_or.kt.out \
    ./obj_or_difftype.kt \
    ./obj_or_difftype.kt.out \
    ./obj_plus.kt \
    ./obj_plus.kt.out \
    ./obj_plus_difftype.kt \
    ./obj_plus_difftype.kt.out \
    ./obj_rshift.kt \
    ./obj_rshift.kt.out \
    ./obj_rshift_difftype.kt \
    ./obj_rshift_difftype.kt.out \
    ./obj_unminus.kt \
    ./obj_unminus.kt.out \
    ./obj_unplus.kt \
    ./obj_unplus.kt.out \
    ./obj_xor.kt \
    ./obj_xor.kt.out \
    ./obj_xor_difftype.kt \
    ./obj_xor_difftype.kt.out \
    ./parse.kt \
    ./parse.kt.out \
    ./test_native.kt \
    ./test_native.kt.out \
    ./test_object.kt \
    ./test_object.kt.out